RESOLVED FIXED 78761
[CSSRegions]overflowRegion tests are flaky
https://bugs.webkit.org/show_bug.cgi?id=78761
Summary [CSSRegions]overflowRegion tests are flaky
Tony Chang
Reported 2012-02-15 16:42:15 PST
In http://trac.webkit.org/changeset/107827, I tried to make the webkitOverflowRegion tests non flaky. The problem is that we're getting a layout before the script runs. My attempts failed-- the tests still sometimes fail on debug builds on chromium: http://test-results.appspot.com/dashboards/flakiness_dashboard.html#tests=fast%2Fregions%2Felement-region-overflow-state.html%2Celement-region-overflow-state-vertical-rl.html It seems weird that this DOM property depends on internal details of whether we've run layout or not. It seems like it should force a layout when the property is accessed. The current tests seem incorrect in that the first time we read webkitOverflowRegion we expect undefined. At that point in time, we should probably get back 'empty'. 'undefined' means that the element is not a region, but it is.
Attachments
patch (7.61 KB, patch)
2012-02-16 07:07 PST, Raul Hudea
no flags
Raul Hudea
Comment 1 2012-02-16 03:38:17 PST
You're right. Reading the webkitOverflowRegion property should trigger a layout. I'll make a fix for this
Raul Hudea
Comment 2 2012-02-16 07:07:30 PST
WebKit Review Bot
Comment 3 2012-02-16 11:40:11 PST
Comment on attachment 127373 [details] patch Clearing flags on attachment: 127373 Committed r107961: <http://trac.webkit.org/changeset/107961>
WebKit Review Bot
Comment 4 2012-02-16 11:40:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.