[CSSRegions]overflowRegion tests are flaky https://bugs.webkit.org/show_bug.cgi?id=78761

Patch by Raul Hudea <rhudea@adobe.com> on 2012-02-16
Reviewed by Tony Chang.

Source/WebCore:

The overflowRegion tests were updated.

* dom/Element.cpp:
(WebCore::Element::webkitRegionOverflow):

LayoutTests:

* fast/regions/element-region-overflow-state-expected.txt:
* fast/regions/element-region-overflow-state-vertical-rl-expected.txt:
* fast/regions/element-region-overflow-state-vertical-rl.html:
* fast/regions/element-region-overflow-state.html:

Canonical link: https://commits.webkit.org/95796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107961 268f45cc-cd09-0410-ab3c-d52691b4dbfc